update restful api styles
